Made progress adressing the issues in the grid alignment

--- a/blacksauce/styles/_grid.scss
+++ b/blacksauce/styles/_grid.scss
@@ -9,7 +9,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 2fr 5fr 3fr;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr 1fr 1fr;
 
 }
 
@@ -28,11 +28,13 @@ body {
     grid-column: 2/3;
     grid-row: 1/2;
 
+
 }
 
 .intro__bodyText {
     grid-column: 2/4;
     grid-row: 1/2;
+    padding-top: 20%;
 }
 
 .button__orderNow {
