--- a/blacksauce/styles/_utilityClasses.scss
+++ b/blacksauce/styles/_utilityClasses.scss
@@ -13,3 +13,17 @@
 .u-transparentBlack {
     background-color: rgba(0, 0, 0, .3);
 }
+
+.button {
+    background-color: #F28705;
+    border: none;
+    border-radius: 20px;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
