--- a/blacksauce/styles/styles.css
+++ b/blacksauce/styles/styles.css
@@ -7,8 +7,8 @@ body {
   display: grid;
   -ms-grid-columns: 2fr 5fr 3fr;
       grid-template-columns: 2fr 5fr 3fr;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
 }
 
 .coverImage {
@@ -45,6 +45,7 @@ body {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
+  padding-top: 20%;
 }
 
 .button__orderNow {
@@ -121,8 +122,19 @@ p {
   font-family: 'Open Sans', sans-serif;
 }
 
+.textColor__white {
+  color: white;
+}
+
 .background__orange {
   background-color: #F28705;
+}
+
+.background__black {
+  border-radius: 25px;
+  background: rgba(0, 0, 0, 0.5);
+  padding-left: 2%;
+  width: 200px;
 }
 
 .u-brandOrange {
@@ -139,5 +151,19 @@ p {
 
 .u-transparentBlack {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+.button {
+  background-color: #F28705;
+  border: none;
+  border-radius: 20px;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
